# OctoPrint-TempETA

./: .codacy.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  .stylelintrc.json  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  babel.cfg  eslint.config.js  jsdoc.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  release_notes_v0.7.1.md  requirements-dev.txt  setup.py
.development/: README.md  commit-if-clean.sh  monitor_octoprint_performance.sh  post_commit_build_dist.sh  restart_octoprint_dev.sh  run_ci_locally.sh  setup_dev.sh  test_checklist.sh
.githooks/: post-commit  pre-commit
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  docs.yml  i18n.yml  release.yml
docs/: README.md  getting-started.md  index.md
docs/api/: javascript.md  python.md
docs/architecture/: algorithms.md  data-flow.md  octoprint-integration.md  overview.md  settings.md
docs/development/: contributing.md  release-process.md  testing.md
docs/frontend/: i18n.md  ui-placements.md
docs/reference/: cli-dev-scripts.md  configuration.md
extras/: README.md  temp_eta.md
octoprint_temp_eta/: __init__.py  _version.py  calculator.py  mqtt_client.py
octoprint_temp_eta/static/css/: temp_eta.css
octoprint_temp_eta/static/js/: temp_eta.docs.js  temp_eta.js
octoprint_temp_eta/static/less/: temp_eta.less
octoprint_temp_eta/templates/: temp_eta_navbar.jinja2  temp_eta_settings.jinja2  temp_eta_sidebar.jinja2  temp_eta_tab.jinja2
octoprint_temp_eta/translations/: README.txt  messages.pot
octoprint_temp_eta/translations/de/LC_MESSAGES/: messages.mo  messages.po
octoprint_temp_eta/translations/en/LC_MESSAGES/: messages.mo  messages.po
scripts/: commit-if-clean.sh  generate-jsdocs.js  generate-jsdocs.sh
tests/: README.md  test_calculator.py  test_mqtt_client.py  test_print_temp_eta.py
translations/: messages.pot
translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/en/LC_MESSAGES/: messages.mo  messages.po
