[build-system]
requires = ["setuptools>=68,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-TempETA"
version = "0.4.2rc2"
description = "OctoPrint plugin to show estimated time remaining for printer heating"
authors = [
    {name = "Ajimaru", email = "ajimaru_gdr@pm.me"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

requires-python = ">=3.7, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = [
    "typing_extensions>=4.0; python_version<'3.8'"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
octoprint_temp_eta = [
    "translations/**/*.po",
    "translations/**/*.mo",
    "translations/**/*.pot",
]

[tool.setuptools.packages.find]
include = [
    "octoprint_temp_eta",
    "octoprint_temp_eta.*"
]

[project.entry-points."octoprint.plugin"]
temp_eta = "octoprint_temp_eta"

[project.urls]
Homepage = "https://github.com/Ajimaru/OctoPrint-TempETA"
Repository = "https://github.com/Ajimaru/OctoPrint-TempETA"
Issues = "https://github.com/Ajimaru/OctoPrint-TempETA/issues"
"Original Request" = "https://github.com/OctoPrint/OctoPrint/issues/469"

[project.optional-dependencies]
develop = [
    "pytest>=7,<8; python_version<'3.8'",
    "pytest>=7; python_version>='3.8'",
    "pytest-cov",
    "pre-commit<3; python_version<'3.8'",
    "pre-commit>=3,<5; python_version>='3.8'",
    "black==23.3.0; python_version<'3.8'",
    "black>=24.0.0; python_version>='3.8'",
    "isort>=5,<7",
    "flake8<7; python_version<'3.8'",
    "flake8>=7.0.0; python_version>='3.8'"
]
