[build-system]
requires = [
    "setuptools>=77,<83",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "octoprint-temp-eta"
version = "0.8.1"
description = "OctoPrint plugin to show estimated time remaining for printer heating"
authors = [
    {name = "Ajimaru", email = "ajimaru_gdr@pm.me"}
]
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.9, <4"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# any additional requirements (besides OctoPrint) should be listed here
dependencies = [
    "paho-mqtt>=2.0.0,<3.0.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
octoprint_temp_eta = [
    "translations/**/*.po",
    "translations/**/*.mo",
    "translations/**/*.pot",
]

[tool.setuptools.packages.find]
include = [
    "octoprint_temp_eta",
    "octoprint_temp_eta.*"
]

[project.entry-points."octoprint.plugin"]
temp_eta = "octoprint_temp_eta"

[project.urls]
Homepage = "https://github.com/Ajimaru/OctoPrint-TempETA"
Repository = "https://github.com/Ajimaru/OctoPrint-TempETA"
Issues = "https://github.com/Ajimaru/OctoPrint-TempETA/issues"
"Original Request" = "https://github.com/OctoPrint/OctoPrint/issues/469"

[project.optional-dependencies]
develop = [
    "pytest>=7,<9",
    "pytest-cov",
    "pre-commit>=3,<5",
    "black>=24.0.0",
    "isort>=5,<7",
    "flake8>=7.0.0",
    "Babel>=2,<3",
    "polib>=1.2,<2"
]
